--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(227, 233, 237) !important;
+  /* background-image: linear-gradient(to right, #2c3e50, #4ca1af); */
+  /* overflow: scroll; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p{
+  font-size: 16px;
+  line-height: 28px;
 }
