--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,70 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+
+.app{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.custom-scroll::-webkit-scrollbar{
+  width: 8px  ;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb{
+border-radius: 30px;
+border: 1px solid #ccc;
+background-color: white;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover{
+background-color: #ccc;
+}
+
+/* .app_navbar{
+  width: 100%;
+  padding: 10px 20px;
+  border-bottom: 1px solid #ccc;
+} */
+
+.app_outer{
+  flex: 1;
+  width: 100%;
+  overflow-x: auto; 
+}
+
+.app_outer::-webkit-scrollbar{
+
+  display: none;
+
+}
+
+.app_boards{
+  padding: 20px;
+  padding-bottom: 0;  
+  min-width: fit-content;
+  display: flex;
+  gap: 30px;
+  height: 100%;
+
+}
+
+.app_boards_board{
+  min-width: 290px;
+  width: 290px ;
+}
+
+.app_boards_board_add{
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);                                
+}
+
+app_boards_board_add:hover{
+
+  box-shadow: 1px 2px 0 1px #ccc ;              
 }
