--- a/src/Components/Editable/Editable_Card.css
+++ b/src/Components/Editable/Editable_Card.css
@@ -13,7 +13,10 @@ form{
     cursor: default;
 }
 .card-head{
-    margin-left: 17%;
+    text-align: center;
+    color: black !important;
+    font-weight: normal !important;
+    /* margin-left: 17%; */
 }
 
 .data-input{
@@ -41,7 +44,7 @@ label{
     font-size: 1rem;
 }
 textarea{
-    border-radius: 2vw;
+    border-radius: 1vw;
     outline: none;
     border: 1px solid rgb(141, 185, 234);
     padding: 10px;
@@ -58,8 +61,8 @@ textarea{
 .editable_edit_footer button{
     outline: none;
     border: none;
-    color: #fff;
-    background-color: rgb(19,121,236);
+    color: black !important;
+    background-color: #0dcaf0 !important;
     transition: 200ms;
     padding: 8px 16px;
     border-radius: 5px;
@@ -67,9 +70,14 @@ textarea{
 }
 
 .editable_edit_footer button:hover{
-    background-color: #0765d1;
+    background-color: #31d2f2;
 }
 
 .editable_edit_footer svg{
     cursor: pointer;
+}
+
+label{
+    font-size: 17px;
+    font-weight: 600;
 }
