--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,10 @@
     position: sticky;
 }
 
+.nav-links:hover{
+    color: white;
+}
+
 .nav-heading{
     font-family: 'Kablammo', cursive;
     color: white;
