Update Functionality Added

--- a/src/Components/DetailsModal/DetailsModal.css
+++ b/src/Components/DetailsModal/DetailsModal.css
@@ -1,6 +1,6 @@
 .show-button{
-    width: 60%;
-    margin-left: 20%;
+    width: 100%;
+    /* margin-left: 20%; */
 }
 .close-button{
     margin-left: 43%;
